RESOLVED FIXED234810
PseudoClassChangeInvalidation should allow multiple pseudo classes as argument
https://bugs.webkit.org/show_bug.cgi?id=234810
Summary PseudoClassChangeInvalidation should allow multiple pseudo classes as argument
Antti Koivisto
Reported 2022-01-03 02:55:05 PST
It is common to invalidate multiple pseudo-classes together (say :disabled and :enabled).
Attachments
Patch (8.40 KB, patch)
2022-01-03 02:57 PST, Antti Koivisto
no flags
Patch (8.86 KB, patch)
2022-01-03 04:08 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2022-01-03 02:57:31 PST
Antti Koivisto
Comment 2 2022-01-03 04:08:50 PST
EWS
Comment 3 2022-01-03 07:45:00 PST
Committed r287540 (245675@main): <https://commits.webkit.org/245675@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448223 [details].
Radar WebKit Bug Importer
Comment 4 2022-01-03 07:46:20 PST
Note You need to log in before you can comment on or make changes to this bug.