PseudoClassChangeInvalidation should allow multiple pseudo classes as argument https://bugs.webkit.org/show_bug.cgi?id=234810

Reviewed by Alan Bujtas.

It is common to invalidate multiple pseudo-classes together (say :disabled and :enabled).

* dom/Element.cpp:
(WebCore::Element::setFocus):
* html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::setAncestorDisabled):
(WebCore::HTMLFormControlElement::parseAttribute):
* html/HTMLOptGroupElement.cpp:
(WebCore::HTMLOptGroupElement::parseAttribute):
* html/HTMLOptionElement.cpp:
(WebCore::HTMLOptionElement::parseAttribute):
* style/PseudoClassChangeInvalidation.h:
(WebCore::Style::PseudoClassChangeInvalidation::PseudoClassChangeInvalidation):



Canonical link: https://commits.webkit.org/245675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287540 268f45cc-cd09-0410-ab3c-d52691b4dbfc